crates/ox-cli/src/snapshots/ox__view_render__tests__renders_banner_info.snap
---
source: crates/ox-cli/src/view_render.rs
assertion_line: 580
expression: out
---
┌────────────────────────────┐
│saved                       │
└────────────────────────────┘
