crates/ox-cli/src/snapshots/ox__view_render__tests__renders_modal_centered_over_background.snap
---
source: crates/ox-cli/src/view_render.rs
assertion_line: 558
expression: out
---
status
┌items─────────────────────────────────┐
│alpha                                 │
│       ┌edit──────────────────┐       │
│       │name: personal        │       │
│       │                      │       │
│       │                      │       │
│       │                      │       │
│       └──────────────────────┘       │
│                                      │
│                                      │
└──────────────────────────────────────┘
